deployment-manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swapi-solution
  labels:
    app.kubernetes.io/name: swapi-solution
    app.kubernetes.io/instance: swapi-solution
    app_name: swapi-solution
    app.kubernetes.io/version: "0.0.1"
    
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: swapi-solution
      app.kubernetes.io/instance: swapi-solution
      app_name: swapi-solution
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swapi-solution
        app.kubernetes.io/instance: swapi-solution
        app_name: swapi-solution
    spec:    
      serviceAccountName: swapi-solution
      containers:
        - name: swapi-solution
          image: "339712727128.dkr.ecr.us-east-1.amazonaws.com/swapi-solution:latest"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: env-volume
              mountPath: /app/.env
              subPath: .env
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          resources:
            limits:
              memory: 1000Mi
            requests:
              cpu: 1000m
              memory: 1000Mi
      volumes:
        - name: env-volume
          configMap:
            name: swapi-solution
