deployment-manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: swapi-solution
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /movies
  labels:
    app.kubernetes.io/name: swapi-solution
    app.kubernetes.io/instance: swapi-solution
    app_name: swapi-solution
    app.kubernetes.io/version: "0.0.1"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: swapi-solution
    app.kubernetes.io/instance: swapi-solution
    app_name: swapi-solution
